force-app/main/default/objects/Alpine_Storefront_Config__c/Alpine_Storefront_Config__c.object-meta.xml
<CustomObject>
    <label>Alpine Storefront Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alpine Storefront Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>