force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Cms_Language__c.field-meta.xml
<CustomField>
    <fullName>Cms_Language__c</fullName>
    <label>CMS Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>