force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Demo_Pricebook2_Id__c.field-meta.xml
<CustomField>
    <fullName>Demo_Pricebook2_Id__c</fullName>
    <label>Demo Pricebook2 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>