force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Enable_Cms_Media__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cms_Media__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable CMS Media</label>
    <type>Checkbox</type>
</CustomField>