force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Flash_Sale_Intro__c.field-meta.xml
<CustomField>
    <fullName>Flash_Sale_Intro__c</fullName>
    <label>Flash Sale Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>