force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Flash_Sale_Title__c.field-meta.xml
<CustomField>
    <fullName>Flash_Sale_Title__c</fullName>
    <label>Flash Sale Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>