force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Footer_Copy__c.field-meta.xml
<CustomField>
    <fullName>Footer_Copy__c</fullName>
    <label>Footer Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>