force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Hero_Body__c.field-meta.xml
<CustomField>
    <fullName>Hero_Body__c</fullName>
    <label>Hero Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>