force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Hero_Eyebrow__c.field-meta.xml
<CustomField>
    <fullName>Hero_Eyebrow__c</fullName>
    <label>Hero Eyebrow</label>
    <length>80</length>
    <type>Text</type>
</CustomField>