force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Hero_Secondary_Cta_Label__c.field-meta.xml
<CustomField>
    <fullName>Hero_Secondary_Cta_Label__c</fullName>
    <label>Hero Secondary CTA Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>