force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Hero_Title__c.field-meta.xml
<CustomField>
    <fullName>Hero_Title__c</fullName>
    <label>Hero Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>