force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Logo_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_Url__c</fullName>
    <description>Public image URL used for the storefront logo mark in the site header.</description>
    <inlineHelpText>請填入可公開存取的 logo 圖片 URL。</inlineHelpText>
    <label>Logo Image URL</label>
    <type>Url</type>
</CustomField>