force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Public_Content_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Content_Channel_Name__c</fullName>
    <label>Public Content Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>