force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Recommendations_Promo_Body__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Promo_Body__c</fullName>
    <label>Recommendations Promo Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>