force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Recommendations_Promo_Cta_Label__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Promo_Cta_Label__c</fullName>
    <label>Recommendations Promo CTA Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>