force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Recommendations_Title__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Title__c</fullName>
    <label>Recommendations Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>