force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Search_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Search_Placeholder__c</fullName>
    <label>Search Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>