force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Site_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Network_Name__c</fullName>
    <label>Site Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>