force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Store_Tagline__c.field-meta.xml
<CustomField>
    <fullName>Store_Tagline__c</fullName>
    <label>Store Tagline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>