force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Technology_Intro__c.field-meta.xml
<CustomField>
    <fullName>Technology_Intro__c</fullName>
    <label>Technology Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>