force-app/main/default/objects/Alpine_Storefront_Config__c/fields/Technology_Title__c.field-meta.xml
<CustomField>
    <fullName>Technology_Title__c</fullName>
    <label>Technology Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>